syntax = "proto3";

option go_package = "DHE/communication";
package pb;

// The greeting service definition.
service Communication {
  rpc  SendMessage (Message) returns (Message) {}
  rpc KeyExchangeChat(stream KeyExchangeMessage) returns (stream KeyExchangeMessage) {}
}

message KeyExchangeMessage{
  int32 id = 1;
  bytes exchangePublicKey = 2;
  bytes encryptedPublicKey = 3;
}

message Message {
  int32 id = 1;
  bytes  text = 2;
}